package chess.movement;

public class ComposedMovement implements MovementValidator{
}
