package chess.movement;

import chess.piece.PieceType;

import java.util.Map;

public class PieceMovementValidator {

    public Map<PieceType , MovementValidator> pieceMovementMap;

}
