package chess.movement.concreteMovementValidator;

import chess.board.Location;
import chess.movement.MovementValidator;

public abstract class ConcreteMovement implements MovementValidator {

    public Location location;

}
