package chess.piece;

public enum PieceColor {
    BLACK,
    WHITE
}
