package chess.piece;

public enum PieceType {
    KING,
    QUEEN,
    BISHOP,
    KNIGHT,
    PAWN,
    ROOK,

    SITHKNIGHT,
    SITHAPPRENTICE
}
