package chess.rules;

import chess.board.Board;

public abstract class GameRules {
    public Board getBoard() {
        return null;
    }
}
