package chess.rules;

public class RegularChessRules {
}
