@startuml
class Game{
 - Board: board
 - Player: player1
 - Player: player2

 + startGame()
}

abstract class Board{
-pieceMap: Map<Location , ChessPiece>
}

class Location{
- int: line
- int: column

}

class ChessPiece{
- PieceColor: pieceColor
- location: currentSquare
- String: name

+ getters()
+ setters()
}
enum PieceColor{
    WHITE , BLACK
}

enum PieceType{
PAWN, KNIGHT, KING , QUEEN, BISHOP, ROOK
}

abstract class GameRules{
- List<PieceType> type
- nbrOfColumns: int
- nbrOfLines: int
- initialPositionMap: Map<BoardSquare , Piece>
    + checkMate()
    + check()
    + staleMate()
}
class RegularChessRules extends GameRules{}
class Player{
 -String: name
 -int: nbrOfWins
 -int: nbrOfMatches
 -boolean: isFirst
 +getters and setters()
}

class PieceMovementValidator {
 - pieceMovementMap : Map<PieceType , MovementValidator>
}

interface MovementValidator{
+ getValidMoves(board)
+ getValidMoves(Board board , Square square)
+ void makeMove(square)
}
class ComposedMovement implements MovementValidator{
- list<MovementValidator> movementValidator
+ isValidMovement(Square, Square) boolean
}
class ConcreteMovement implements MovementValidator{
+ isValidMovement(square , Square) boolean
}
Board --> Location
ChessPiece <-- GameRules
ChessPiece <-- PieceColor
Game <-- Board
ChessPiece <-- Board
Game --> GameRules
Game <-- Player
ChessPiece *-- PieceType
PieceMovementValidator --> PieceType
PieceMovementValidator --> MovementValidator
@enduml
//Board es un mapa, que cada location es un Key y la Key tiene un ChessPiece